load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "kernel",
    srcs = [
        "boot.S",
        "init.cc",
    ],
    features = [
    ],
    copts = [
        "--target=i386-pc-none-elf",
    ],
    linkopts = [
        "-nostdlib",
        "--target=i386-pc-none-elf",
        "-T $(location linker.ld)",
    ],
    linkstatic = True,
    deps = [
        "linker.ld",
    ],
)
